--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
   <head>
   <meta name="description" content="Hello, My Name Is Muhammet. I'm Full-Stack Developer">
-    <title>MoTion42</title>
+    <title>mythors</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/style.css">
     <meta property="og:image" content="https://cdn.discordapp.com/avatars/432854313736339466/a_8855bcfb9fc74a0b59fb291412ae7684.gif?size=1024">
@@ -20,23 +20,23 @@
     
   </div>
   <h1>
-    MoTion42
+    Mythors
   </h1>
   <p id="title"></p>
   <br /><br />
-    <p id="motion-title"></p>
+    <p id="mythors-title"></p>
   <div class="flex-box discorcard">
     <div>
-      <a class="nav-link" href="https://motion42.glitch.me/yonlendir?url=https://discord.com/users/432854313736339466" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-discord" style="color: blue;"></i> Discord</a>  
+      <a class="nav-link" href="https://mythors.glitch.me/yonlendir?url=https://discord.com/users/432854313736339466" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-discord" style="color: blue;"></i> Discord</a>  
     </div>
       <div>
-      <a class="nav-link" href="https://motion42.glitch.me/yonlendir?url=https://www.instagram.com/motion42.hub" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-instagram" style="color: pink;"></i> Instagram</a>  
+      <a class="nav-link" href="https://mythors.glitch.me/yonlendir?url=https://www.instagram.com/mythors.dc" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-instagram" style="color: pink;"></i> Instagram</a>  
     </div>
       <div>
-      <a class="nav-link" href="https://motion42.glitch.me/yonlendir?url=https://github.com/MoTion42" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-github" style="color: white;"></i> Github</a>  
+      <a class="nav-link" href="https://mythors.glitch.me/yonlendir?url=https://github.com/mythors" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-github" style="color: white;"></i> Github</a>  
     </div>     
  <div>
-      <a class="nav-link" href="https://motion42.glitch.me/yonlendir?url=https://www.youtube.com/c/pinkcode" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-youtube" style="color: red;"></i> Youtube</a>  
+      <a class="nav-link" href="https://mythors.glitch.me/yonlendir?url=https://www.youtube.com/c/pinkcode" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-youtube" style="color: red;"></i> Youtube</a>  
     </div>
 
   </div>  
@@ -44,19 +44,19 @@
    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
   var options = {
-  strings: [' <a class="nav-link" href="https://motion42.glitch.me/yonlendir?url=https://discord.com/users/432854313736339466" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-envelope"></i> Contact: motions42@hotmail.com</a>'],
+  strings: [' <a class="nav-link" href="https://mythors.glitch.me/yonlendir?url=https://discord.com/users/432854313736339466" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi-envelope"></i> Contact: mythors@hotmail.com</a>'],
   typeSpeed: 40,
   cursorChar: '',
   showCursor: false
 };
   var options_2 = {
-  strings: ['Hello!', 'İ am MoTion42.'," My real name is Mohammed. I was born in 2004, I am 17 years old. I am from Azerbaijan, I live in the city of Khirdalan. I am interested in software. I do projects that come to my mind. Sometimes I share my projects on my github account. If you want to reach me, you can check out my social media accounts below!"],
+  strings: ['Hello!', 'İ am mythors.'," My real name is Mohammed. I was born in 2004, I am 17 years old. I am from Azerbaijan, I live in the city of Khirdalan. I am interested in software. I do projects that come to my mind. Sometimes I share my projects on my github account. If you want to reach me, you can check out my social media accounts below!"],
   typeSpeed: 40,
   cursorChar: '',
   showCursor: false
 };
       
-var typed = new Typed('#motion-title', options);
+var typed = new Typed('#mythors-title', options);
       var typed2 = new Typed('#title', options_2);
       
       
