--- a/views/yonlendir.ejs
+++ b/views/yonlendir.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>MoTion42・Loading...</title>
+    <title>Loading...</title>
         <link rel="icon" href="https://media.discordapp.net/attachments/861316754022072340/881447129070067752/giphy.png?width=225&height=281"  />
 
     <link rel="stylesheet" href="/style.css">
